Fixed profile image not showing and fixed some css styling for inputs

--- a/darisni/resources/js/Components/Profile/ProfilePasswordInput/ProfilePasswordInput.module.css
+++ b/darisni/resources/js/Components/Profile/ProfilePasswordInput/ProfilePasswordInput.module.css
@@ -1,13 +1,11 @@
 .passwordField {
     position: relative;
-    display: flex;
-    align-items: center;
 }
 
 .togglePassword {
     position: absolute;
     right: 12px;
-    top: 50%;
+    top: 70%;
     transform: translateY(-50%);
     background: none;
     border: none;
